<resources>
    <string name="app_name">Health Tracker</string>
    <string name="Image_Background">Image</string>
    <string name="stop_button">Stop</string>
    <string name="next_button">Next</string>
    <string name="cancel_button">Cancel</string>
    <string name="start_button">Start</string>
    <string name="file_list">Files</string>
    <string name="patient_data">Patient Data</string>
    <string name="name_data">First Name:</string>
    <string name="last_data" translatable="false">Last Name:</string>
    <string name="date_data">Date - Time:</string>
    <string name="time_data">Time:</string>
    <string name="next_button2">Next</string>
    <string name="save_button">Save</string>
    <string name="text_connection">Connection Established</string>
    <string name="first_name">Enter your first name</string>
    <string name="last_name">Enter your last name</string>
    <string name="text_opening">Please connect to a bluetooth device</string>
    <string name="date_data_input">Date</string>
    <string name="time_data_input">Time</string>
    <string name="choose_data">Choose your name</string>
    <string name="patient_id"> </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_files_page">Files</string>
    <string name="saved">Patient Saved</string>
    <string name="not_saved">Couldn\'t Save</string>
    <string name="no_patient">No patient</string>
    <string name="recording_text_view">CLICK ON START BUTTON TO START THE RECORDING.</string>
    <string name="recorded_text">CLICK CANCEL TO DISCARD THE RECORDED AUDIO.CLICK NEXT TO SAVE THE FILE.</string>
    <string name="update">UPDATE</string>
    <string name="cancel">CANCEL</string>
    <string name="updated">Patient Updated</string>
    <string name="btnONOFF">ON / OFF</string>
    <string name="btnDiscoverable_on_off">Enable Discoverable</string>
    <string name="tvDeviceAddress" />
    <string name="tvDeviceName" />
    <string name="btnFindUnpairedDevices">Discover</string>
    <string name="next_button_record">Next</string>
    <string name="bt_connection_lost">bt_connection_lost</string>
    <string name="bt_unable">bt_unable</string>
    <string name="recording_start">Record</string>
    <string name="ivRowPlay" />
    <string name="test">test</string>

    <string name="library_name">Waveform</string>
    <string name="action_settings">action_settings</string>
    <string name="start_record_button">START</string>
    <string name="stop_record_button">STOP</string>
    <string name="record_button">selected button</string>
    <string name="main_page_logo">Health Tracker</string>
    <string name="main_page_file_view">View Files</string>
    <string name="toast_msg">\"You are connected to a bluetooth device\"</string>
    <string name="note_last_name">" "</string>
    <string name="note_date">" "</string>
    <string name="zoom_img" />
    <string name="next_button_record2" />
    <string name="note">" "</string>
    <string name="notee" />
    <string name="Connect">Connect</string>
    <string name="button_okay">Ok</string>
    <string name="check">check</string>
    <string name="iv_row_edit" />
    <string name="iv_row_delete" />
    <string name="input_date_edit" />
    <string name="Record">record</string>
    <string name="record_start">Start/Stop</string>
    <string name="send_file">Transfer</string>
    <string name="start_recorded_button">start_recorded_button</string>
    <string name="stop_recorded_button">stop_recorded_button</string>
    <string name="next_button_recorded">next_button_recorded</string>
    <string name="zoom_recorded_img">zoom_recorded_img</string>
    <string name="patient_first_name_show" />
    <string name="patient_last_name_show" />
    <string name="record_date" />
</resources>
