<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".UI.RecordWave">

    <com.example.zece.healthtracker.Waveform.WaveformView
        android:id="@+id/playbackWaveformView"
        android:layout_width="357dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="145dp"
        android:layout_weight="1"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mode="PLAYBACK"
        app:waveformColor="#D3D3D3"
        app:waveformFillColor="#A9A9A9"
        app:waveformStrokeThickness="3" />


    <Button
        android:id="@+id/start_record_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="51dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/start_record_button"
        android:text="@string/start_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stop_record_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playbackWaveformView" />

    <Button
        android:id="@+id/stop_record_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="51dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/stop_record_button"
        android:text="@string/stop_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_button_record2"
        app:layout_constraintStart_toEndOf="@+id/start_record_button"
        app:layout_constraintTop_toBottomOf="@+id/playbackWaveformView" />

    <Button
        android:id="@+id/next_button_record2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="51dp"
        android:background="@color/colorAccent"
        android:text="@string/next_button_record"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stop_record_button"
        app:layout_constraintTop_toBottomOf="@+id/playbackWaveformView" />

</android.support.constraint.ConstraintLayout>