<?xml version="1.0" encoding="UTF-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UI.MainActivity">

    <ListView
        android:id="@+id/lvNewDevices"
        android:layout_width="383dp"
        android:layout_height="347dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnONOFF" />

    <Button
        android:id="@+id/next_button_home"
        android:layout_width="90dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="149dp"
        android:background="@color/colorGreen"
        android:contentDescription="@string/next_button2"
        android:text="@string/next_button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/record_start"
        app:layout_constraintTop_toBottomOf="@+id/lvNewDevices" />

    <Button
        android:id="@+id/btnONOFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="1dp"
        android:onClick="btnEnableDisable_Discoverable"
        android:text="@string/btnONOFF"
        app:layout_constraintBottom_toTopOf="@+id/lvNewDevices"
        app:layout_constraintEnd_toStartOf="@+id/btnDiscoverable_on_off"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDiscoverable_on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="1dp"
        android:text="@string/btnDiscoverable_on_off"
        app:layout_constraintBottom_toTopOf="@+id/lvNewDevices"
        app:layout_constraintEnd_toStartOf="@+id/btnFindUnpairedDevices"
        app:layout_constraintStart_toEndOf="@+id/btnONOFF"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFindUnpairedDevices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="1dp"
        android:onClick="btnDiscover"
        android:text="@string/btnFindUnpairedDevices"
        app:layout_constraintBottom_toTopOf="@+id/lvNewDevices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDiscoverable_on_off"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/record_start"
        android:layout_width="90dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="149dp"
        android:background="@color/colorGreen"
        android:text="@string/Record"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_button_home"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toEndOf="@+id/check_connection"
        app:layout_constraintTop_toBottomOf="@+id/lvNewDevices" />

    <TextView
        android:id="@+id/text_bluetooth_connecton_status"
        android:layout_width="92dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/record_start" />

    <Button
        android:id="@+id/check_connection"
        android:layout_width="90dp"
        android:layout_height="58dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="149dp"
        android:background="@color/colorGreen"
        android:text="@string/Connect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/record_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvNewDevices" />


</android.support.constraint.ConstraintLayout>